Added Tweet item, User item and User pojo.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,9 +8,16 @@
     <string name="location_hint">Местоположение</string>
     <string name="followings_hint">Читает</string>
     <string name="followers_hint">Читатели</string>
+    <string name="date_hint">Дата</string>
+    <string name="content_hint">Содержание</string>
 
     <string name="search_query_hint">Введите имя</string>
     <string name="search_hint">Поиск</string>
     <string name="not_enough_symbols_msg">Введите хотя бы один символ</string>
     <string name="loading_error_msg">Ошибка при загрузке данных</string>
+
+    <string name="fa_map_marker">\uf041</string>
+    <string name="fa_retweet">\uf079</string>
+    <string name="fa_heart_o">\uf08a</string>
+
 </resources>
